# projet-dl-addiction

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: AI_TRANSPARENCY.md  DELIVERABLES.md  REPORT.md  TROUBLESHOOTING.md
docs/screenshots/: README.md
notebooks/: 01_eda.executed.ipynb  01_eda.ipynb  02_ml_baseline.executed.ipynb  02_ml_baseline.ipynb  03_dl_fondamental.ipynb  04_dl_avance.ipynb
src/: evaluation.py  models_advanced.py  models_dl.py  models_ml.py  preprocessing.py
tests/: test_models.py  test_preprocessing.py
