[project]
name = "projet-dl-addiction"
version = "0.1.0"
description = "TikTok & Instagram Addiction — Deep Learning Project"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "streamlit>=1.28",
    "plotly>=5.15",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "joblib>=1.3",
    "tqdm>=4.66",
    "optuna>=3.4",
    "pytest>=7.4",
    "reportlab>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
